Add configurable DEBUG_LOGGING flag to control debug output
- Add DEBUG_LOGGING environment variable to .env.example
- Create debug utility with conditional logging function
- Replace all hardcoded DEBUG prints with debug_print() calls
- Debug logs now only appear when DEBUG_LOGGING=true in .env
- Cleaner console output in production by default

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_HOST=0.0.0.0
 APP_PORT=8080
 FLASK_ENV=development
 FLASK_DEBUG=0
+DEBUG_LOGGING=false
 
 # Optional: Wyoming Piper TTS server (enables TTS functionality)
 WYOMING_PIPER_HOST=0.0.0.0
